experiment/openrouter-run/stage3-rac/few_shot/compile_logs/ComputeAreaBranch.log
warning: [options] system modules path not set in conjunction with -source 11
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/few_shot/ComputeAreaBranch/ComputeAreaBranch.java:4: error: illegal start of type
    //@         - ((\max(0, (\min(ax2, bx2) - \max(ax1, bx1)))) * (\max(0, (\min(ay2, by2) - \max(ay1, by1)))));
                                 ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/few_shot/ComputeAreaBranch/ComputeAreaBranch.java:4: error: ')' expected
    //@         - ((\max(0, (\min(ax2, bx2) - \max(ax1, bx1)))) * (\max(0, (\min(ay2, by2) - \max(ay1, by1)))));
                                  ^
2 errors
1 warning
